  colons.  https://github.com/Pylons/pyramid/issues/629

- Backport bug fix from master: On at least one 64-bit Ubuntu system under
  Python 3.2, using the ``view_config`` decorator caused a ``RuntimeError:
  dictionary changed size during iteration`` exception.  It no longer does.
  See https://github.com/Pylons/pyramid/issues/635 for more information.

1.3.2 (2012-05-19)
==================

- Version 1.3.1 was a brownbag release, at very least on Windows and possibly
  on other operating systems, due to the existence of a stray ``"package``
  directory (quote included) in the root directory of the 1.3.1 tarball.
  This directory and its contents was present because the tarball was created
  using a release version of ``setuptools-git`` rather than a
  ``setuptools-git`` installed from a checkout.  The only change in this
  release is to correct the packaging error in 1.3.1.

1.3.1 (2012-05-19)
==================

Bug Fixes
---------

- Add ``REMOTE_ADDR`` to the ``prequest`` WSGI environ dict for benefit of
  the debug toolbar, which effectively requires it to be present to work
  properly.

- When an asset specification was used as a Mako ``renderer=`` argument and a
  ``mako.modules_directory`` was specified, Pyramid would fail to render the
  template and instead would raise an error when attempting to write the file
  to the modules directory.  Example symptom: ``WindowsError: [Error 267] The
  directory name is invalid:
  'c:\\docume~1\\chrism\\locals~1\\temp\\tmp9jtjix\\pyramid.tests:fixtures'``.
  We now replace the colon in the Mako module filename with a dollar sign, so
  it can work on Windows. See https://github.com/Pylons/pyramid/issues/512
  for more information.

- When no authentication policy was configured, a call to
  ``pyramid.security.effective_principals`` would unconditionally return the
  empty list.  This was incorrect, it should have unconditionally returned
  ``[Everyone]``, and now does.
