@@ -41,12 +41,17 @@ class PkgResourceTemplateLookup(TemplateLookup):
     def get_template(self, uri):
         """Fetch a template from the cache, or check the filesystem
         for it
-        
+
         In addition to the basic filesystem lookup, this subclass will
         use pkg_resource to load a file using the asset
         specification syntax.
-        
+
         """
+        if '$' in uri:
+            # Checks if the uri is already adjusted and brings it back to
+            # an asset spec. Normally occurs with inherited templates or
+            # included components.
+            uri = uri.replace('$', ':')
         isabs = os.path.isabs(uri)
         if (not isabs) and (':' in uri):
             # Windows can't cope with colons in filenames, so we replace the
@@ -69,7 +74,7 @@ class PkgResourceTemplateLookup(TemplateLookup):
         return TemplateLookup.get_template(self, uri)
 
 
-registry_lock = threading.Lock() 
+registry_lock = threading.Lock()
 
 class MakoRendererFactoryHelper(object):
     def __init__(self, settings_prefix=None):
@@ -136,7 +141,7 @@ class MakoRendererFactoryHelper(object):
 
             registry_lock.acquire()
             try:
-                registry.registerUtility(lookup, IMakoLookup, 
+                registry.registerUtility(lookup, IMakoLookup,
                                          name=settings_prefix)
             finally:
                 registry_lock.release()
@@ -159,7 +164,7 @@ class MakoLookupTemplateRenderer(object):
     def __init__(self, path, lookup):
         self.path = path
         self.lookup = lookup
- 
+
     def implementation(self):
         return self.lookup.get_template(self.path)
 
